plugins {
  id 'java'
  id 'jvm-test-suite'
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

repositories {
  mavenCentral()
}

testing {
  suites {
    test {
      useJUnitJupiter()
      dependencies {
        implementation 'org.assertj:assertj-core:3.24.2'
      }
    }
  }
}

tasks.named('test') {
  dependsOn(':common:createTestIndex')
  jvmArgs = ["--enable-native-access=ALL-UNNAMED", "--add-modules", "jdk.incubator.vector"]
}

dependencies {
  implementation "org.apache.lucene:lucene-core:${luceneVersion}"
  implementation "org.apache.lucene:lucene-queryparser:${luceneVersion}"
  implementation "org.apache.lucene:lucene-analysis-common:${luceneVersion}"
}
